[gd_scene load_steps=4 format=3 uid="uid://bqnqmxqa2iw3g"]

[ext_resource type="Texture2D" uid="uid://cum5khv3jtce1" path="res://assets/ground.png" id="1_45k34"]
[ext_resource type="Script" path="res://Scripts/ground.gd" id="1_n3v3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2phle"]
size = Vector2(1733, 20)

[node name="Ground" type="Node2D"]
script = ExtResource("1_n3v3e")

[node name="Ground1" type="Area2D" parent="."]

[node name="Sprite1" type="Sprite2D" parent="Ground1"]
texture = ExtResource("1_45k34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
position = Vector2(-1, -71)
shape = SubResource("RectangleShape2D_2phle")

[node name="Ground2" type="Area2D" parent="."]

[node name="Sprite2" type="Sprite2D" parent="Ground2"]
position = Vector2(1728, 0)
texture = ExtResource("1_45k34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(1731, -71)
shape = SubResource("RectangleShape2D_2phle")

[connection signal="body_entered" from="Ground1" to="." method="_on_ground_entered"]
[connection signal="body_entered" from="Ground2" to="." method="_on_ground_entered"]
